--- a/docker/Dockerfile.tf-geoai
+++ b/docker/Dockerfile.tf-geoai
@@ -16,7 +16,7 @@ RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
 
 RUN python -m pip install --upgrade pip setuptools wheel
 
-RUN pip install tensorflow==2.16.1
+RUN pip install tensorflow
 
 RUN pip install \
     pandas scipy scikit-learn \
