--- a/docker/Dockerfile.tf-geoai
+++ b/docker/Dockerfile.tf-geoai
@@ -1,10 +1,9 @@
 # Official TF GPU image (Python 3.10, CUDA 12.1, cuDNN 8)
 FROM tensorflow/tensorflow:2.13.0-gpu
 
-# System dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gdal-bin libgdal-dev python3-gdal \
     libgl1 libglib2.0-0 libspatialindex-dev \
+    gdal-bin libgdal-dev \
     proj-bin libproj-dev \
     build-essential pkg-config \
     pciutils curl git wget \
@@ -12,13 +11,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 RUN python -m pip install --upgrade pip setuptools wheel
 
-# Install geospatial and scientific Python packages
 RUN pip install --no-cache-dir \
     pandas scipy scikit-learn \
     matplotlib seaborn jupyterlab ipywidgets tqdm pillow opencv-python-headless \
-    tensorboard rioxarray segmentation-models \
-    fiona geopandas dask xarray rich \
-    rasterio \
+    tensorboard \
+    "fiona==1.9.6" \
+    "geopandas==0.13.2" \
+    "rasterio==1.3.8" \
+    rioxarray \
+    dask xarray rich \
+    segmentation-models \
+    pystac-client planetary-computer stackstac
 
 WORKDIR /data
 CMD ["/bin/bash"]
