--- a/config.yaml
+++ b/config.yaml
@@ -1,20 +1,35 @@
+# Dataset modalities to be used
 DATASET:
+  # - S1
   - S2
   - BD
+  # - VHR
 
+# Input shapes for different modalities
 IN_SHAPE:
   S1: [128, 128, 2]
   S2: [128, 128, 10]
   BD: [128, 128, 1]
   VHR: [512, 512, 4]
 
-LR: 1e-4
-BATCH_SIZE: 4
+# Model and Training Configuration
 N_CLASSES: 3
-EPOCHS: 500
-DATA_PATH: /data/ideabench/main/v1/
+LR: 0.0001
+BATCH_SIZE: 16
+N_EPOCHS: 250
+STRIDE: 0.5
+MONITOR: val_loss
+PATIENCE: 20
+LOSS: categorical_crossentropy 
+OPTIMIZER: adam
+METRICS:
+  - accuracy
+  - f1_score
+
+# Paths
+# DATA_PATH: /data/ideabench/extra/sentinel/
+DATA_PATH: /data/ideabench/main/v2/
 CHECKPOINT_PATH: ./checkpoint/
 LOG_PATH: ./log/
-PREDICTION_PATH: /data/output/prediction/main/
-AOI: /data/raw/aoi/
-STRIDE: 0.5
+PREDICTION_PATH: /data/output/prediction/
+AOI_PATH: /data/raw/aoi/
