--- a/config.yaml
+++ b/config.yaml
@@ -10,13 +10,22 @@ IN_SHAPE:
 # Training configuration
 N_CLASSES: 3
 LR: 0.0001
-FT_LR: 0.01 # Fine-tuning learning rate
 BATCH_SIZE: 4
 N_EPOCHS: 150
-FT_EPOCHS: 30 # Fine-tuning epochs
 MONITOR: val_loss
 MODE: min
 PATIENCE: 10
+
+# Fine-tuning configuration
+FINETUNE:
+  TYPE: full  # Options: 'full' (all layers), 'head' (decoder only)
+  N_EPOCHS: 25
+  BATCH_SIZE: 4
+  MONITOR: loss  # Monitor training loss (no val data)
+  MODE: min
+  PATIENCE: 15
+  LR_FULL: 5.0e-5   # Learning rate for full fine-tuning
+  LR_HEAD: 1.0e-4   # Learning rate for head-only fine-tuning
 
 # Inference configuration
 STRIDE_RATIO: 0.5
